# mcp-grafana

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
src/mcp_grafana/: __init__.py  caller.py  client.py  http.py  tools.py
tests/: test_client.py  test_tools.py
