[project]
name = "mcp-grafana"
version = "0.1.0"
description = "Read-only Grafana MCP server using the caller's auth.romaine.life service JWT."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.18.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_grafana"]

[project.scripts]
mcp-grafana-http = "mcp_grafana.http:main"
